FIX: Increase delay for testimonials change

--- a/index.html
+++ b/index.html
@@ -486,7 +486,11 @@
           </div>
           <div class="col col-xs-7">
             <h3 class="pt-3 mx-auto testimonial-header"></h3>
-            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
+            <img
+              src="assets/images/IAHIP-logo.png"
+              alt="IAHIP-logo"
+              class="iahip-logo"
+            />
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -501,7 +505,11 @@
           </div>
           <div class="col col-xs-7">
             <h3 class="pt-3 mx-auto testimonial-header"></h3>
-            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
+            <img
+              src="assets/images/IAHIP-logo.png"
+              alt="IAHIP-logo"
+              class="iahip-logo"
+            />
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -516,7 +524,11 @@
           </div>
           <div class="col col-xs-7">
             <h3 class="pt-3 mx-auto testimonial-header"></h3>
-            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
+            <img
+              src="assets/images/IAHIP-logo.png"
+              alt="IAHIP-logo"
+              class="iahip-logo"
+            />
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -531,7 +543,11 @@
           </div>
           <div class="col col-xs-7">
             <h3 class="pt-3 mx-auto testimonial-header"></h3>
-            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
+            <img
+              src="assets/images/IAHIP-logo.png"
+              alt="IAHIP-logo"
+              class="iahip-logo"
+            />
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -546,7 +562,11 @@
           </div>
           <div class="col col-xs-7">
             <h3 class="pt-3 mx-auto testimonial-header"></h3>
-            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
+            <img
+              src="assets/images/IAHIP-logo.png"
+              alt="IAHIP-logo"
+              class="iahip-logo"
+            />
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -600,7 +620,11 @@
           </p>
         </div>
         <div class="button pt-1 pb-5 mx-auto">
-          <a href="https://www.linkedin.com/company/parc-training-ireland/" class="button-link" target="_blank">
+          <a
+            href="https://www.linkedin.com/company/parc-training-ireland/"
+            class="button-link"
+            target="_blank"
+          >
             <span class="button-text d-block">Linkedin page</span>
             <span class="button-icon pt-1"
               ><i class="fa-solid fa-circle-arrow-right"></i
@@ -625,8 +649,12 @@
         <div>
           <ul class="footer-links">
             <li><a class="py-2 px-4 rounded" href="#">home</a></li>
-            <li><a class="py-2 px-4 rounded" href="./about.html">about us</a></li>
-            <li><a class="py-2 px-4 rounded" href="./contact.html">contact</a></li>
+            <li>
+              <a class="py-2 px-4 rounded" href="./about.html">about us</a>
+            </li>
+            <li>
+              <a class="py-2 px-4 rounded" href="./contact.html">contact</a>
+            </li>
           </ul>
         </div>
         <div>
